testcases/pos/batch/higher_order_return.bard
let fun g(i) = i + 1
    fun f() = g
in
    f()(41)
end
