testcases/neg/par/function_missing_paren.bard
let fun f) = 34
in f() end
